# AIRDOS

./: .CMakeLists.txt.swp  CMakeLists.txt  airdos.drawio  archi.drawio  package.xml
include/: a_star_node.h  route.h  routeclient.hpp  routeservice.hpp
include/delivery_operator/: delivery_operator.hpp
include/drone/: route_injection_sub.hpp  state_pub.hpp
include/log/: latest_list
include/mission_control/: mission_pub.hpp
include/route_service/: a_star_node.h  route.h  routeclient.hpp  routeservice.hpp
launch/: airdos.launch.py  airdos_sim.launch.py  drone_ros1.launch  waypoint_injector.launch
log/: latest_list
msg/: Waypoint.msg
script/: .airdos.sh.swp  .mavros.sh.swp  airdos.sh  mavros.sh
script/nano_run/: .airdos.sh.swp  .mavros.sh.swp  airdos.sh  mavros.sh
src/: AIRDOS Architecture.drawio  a_star_node.cpp  listener.cpp  main.cpp  route.cpp  routeclient.cpp  routemaker_node.cpp  routeservice.cpp
src/RouteDatabase/: node.txt
src/RouteDatabase (Nonghyup)/: node.txt
src/RouteDatabase (Nonghyup)/connection/: A-1.txt  B-1.txt  C-1.txt  D-1.txt  G-1.txt  H-1.txt  I-1.txt
src/RouteDatabase (Nonghyup)/route/A-1/: D-1.plan  F-1.plan
src/RouteDatabase (Nonghyup)/route/B-1/: A-1.plan  C-1.plan  E-1.plan
src/RouteDatabase (Nonghyup)/route/C-1/: B-1.plan  F-1.plan
src/RouteDatabase (Nonghyup)/route/D-1/: A-1.plan  C-1.plan  E-1.plan  G-1.plan
src/RouteDatabase (Nonghyup)/route/E-1/: D-1.plan
src/RouteDatabase (Nonghyup)/route/F-1/: A-1.plan  E-1.plan
src/RouteDatabase (Nonghyup)/route/G-1/: D-1.plan  F-1.plan
src/RouteDatabase (Nonghyup)/route/H-1/: I-1.plan
src/RouteDatabase (Nonghyup)/route/I-1/: D-1.plan  F-1.plan  H-1.plan
src/RouteDatabase (Pangyo)/connection/: B-1.txt  Base.txt  C-3.txt  C-4.txt
src/RouteDatabase (Pangyo)/route/A-4/: A-3.plan
src/RouteDatabase (Pangyo)/route/B-1/: A-4.plan
src/RouteDatabase (Pangyo)/route/B-2/: B-3.plan
src/RouteDatabase (Pangyo)/route/B-3/: B-2.plan  B-4.plan
src/RouteDatabase (Pangyo)/route/Base/: A-1.plan  A-2.plan
src/RouteDatabase (Pangyo)/route/C-1/: B-1.plan  C-2.plan  C-3.plan
src/RouteDatabase (Pangyo)/route/C-2/: C-1.plan
src/RouteDatabase (songdo)/: node.txt
src/RouteDatabase (songdo)/connection/: A-1.txt  B-1.txt  Base.txt  C-1.txt
src/RouteDatabase (songdo)/route/A-1/: Base.plan
src/RouteDatabase (songdo)/route/B-1/: Base.plan  C-1.plan
src/RouteDatabase (songdo)/route/Base/: A-1.plan  B-1.plan
src/RouteDatabase (songdo)/route/C-1/: B-1.plan
src/RouteDatabase/connection/: A-1.txt  A-3.txt  A-4.txt  B-1.txt  E-1.txt  F-1.txt
src/RouteDatabase/route/A-1/: B-1.plan
src/RouteDatabase/route/A-2/: Base.plan
src/RouteDatabase/route/A-4/: B-1.plan
src/RouteDatabase/route/B-1/: A-1.plan  B-2.plan  C-1.plan
src/RouteDatabase/route/B-2/: B-1.plan
src/RouteDatabase/route/B-4/: C-2.plan
src/RouteDatabase/route/C-1/: C-4.plan  D-1.plan
src/RouteDatabase/route/C-2/: B-4.plan
src/RouteDatabase/route/C-3/: C-1.plan  C-4.plan
src/RouteDatabase/route/C-4/: C-1.plan  C-3.plan
src/RouteDatabase/route/E-1/: B-1.plan  F-1.plan  H-1.plan
src/RouteDatabase/route/F-1/: C-1.plan  I-1.plan
src/RouteDatabase/route/G-1/: H-1.plan
src/RouteDatabase/route/H-1/: E-1.plan  G-1.plan
src/connection/: A-1.txt  A-2.txt  B-2.txt  B-3.txt  B-4.txt  C-1.txt  C-2.txt
src/delivery_operator/: delivery_operator.cpp
src/drone/: route_injection_sub.cpp  state_pub.cpp  waypoint_injector.cpp  waypoint_injector_client.cpp  waypoint_injector_server.cpp
src/mission_control/: mission_pub.cpp
src/route/A-1/: A-4.plan  Base.plan
src/route/A-2/: A-3.plan
src/route/A-3/: A-2.plan  A-4.plan
src/route/A-4/: A-1.plan
src/route/B-1/: B-4.plan
src/route/B-4/: B-1.plan  B-3.plan
src/route_service/: a_star_node.cpp  route.cpp
src/route_service/client/: routeclient.cpp
src/route_service/server/: routeservice.cpp
src/route_service_server/: main.cpp
srv/: Route.srv
